[build-system]
requires = ["setuptools>=30.3.0", "wheel", "setuptools_scm[toml]>=6.2,!=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "hera_cal/_version.py"
parentdir_prefix_version = "hera_cal-"
fallback_version  = "0.0.0"

[tool.pytest]
addopts = "--ignore=scripts --cov=hera_cal --cov-config=.coveragerc"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Fixing auto-correlations to be be real-only:UserWarning",
    'ignore:telescope_location is not set\. Using known values for HERA\.:UserWarning',
    "ignore:invalid value encountered in divide:RuntimeWarning",
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",
    "W",
    # "A",    # builtins
    # "ARG",  # unused arguments
    # "B",    # bugbear
    # "C4",   # comprehensions
    # "C90",  # mccabe complexity
    # "COM",  # commas
    # "D",    # docstyle
    # "DTZ",  # datetime
    # "F",    # pyflakes
    # "FA",   # future annotations
    # "FURB", # refurb
    # "I",    # isort
    # "ISC",  # implicit string concat
    # "LOG",  # logging
    # "N",    # pep8-naming
    # "NPY",  # numpy-specific rules
    # "PERF", # performance
    # "UP",   # pyupgrade
    # "PIE",  # flake8-pie
    # "PLC",  # pylint
    # "PLE",  # pylint
    # "PLR",  # pylint
    # "PLW",  # pylint
    # "PT",   # pytest-style
    # "PTH",  # use pathlib
    # "Q",    # quotes
    # "RSE",  # flake8-raise
    # "RUF",  # ruff-specific rules
    # "SIM",  # flake8-simplify
    # "TRY",  # tryceratops
    # "UP",   # pyupgrade
]

ignore = [
    "E402",
    "E501",
    "W291",
    "W293",
    # Following Rulesets we really don't want
    "AIR",    # airflow - unused library
    "ASYNC",  # async  -- unused library
    "DJ",     # django -- unused library
    "EXE",    # executable -- unused features
    "G",      # logging-format -- this linter gives bad advice a lot
    "INT",    # gettext -- unknown why we would use this
    "PD",     # unused library
    "PGH",    # pygrep hooks?
    "PYI",    # typing stuff
    "S",      # flake8-bandit -- security stuff that isn't really applicable
    "SLOT",   # slots stuff that isn't applicable atm
    "TCH",    # type-checking
    "TD",     # todo's
    "TID",    # tidy imports (should be done with isort)
    "TRIO",   # trio unused package
    "YTT",    # py2to3 stuff
]
