[build-system]
requires = ["setuptools>=30.3.0", "wheel", "setuptools_scm[toml]>=6.2,!=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "hera_cal/_version.py"
parentdir_prefix_version = "hera_cal-"
fallback_version  = "0.0.0"

[tool.pytest]
addopts = "--ignore=scripts --cov=hera_cal --cov-config=.coveragerc"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Fixing auto-correlations to be be real-only:UserWarning",
    'ignore:telescope_location is not set\. Using known values for HERA\.:UserWarning',
    "ignore:invalid value encountered in divide:RuntimeWarning",
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",
    "W"
]

ignore = [
    "E402",
    "E501",
    "W291",
    "W293",
]
